# wandering-vibe

./: .gitignore  .mcp.json  CLAUDE.md
ai-personality/: CLAUDE.md  package-lock.json  (+2 more)
claude-code-slack/: .env.template  CLAUDE.md  README.md  cron.example.yaml  pyproject.toml
claude-code-slack/docs/: slack-app-setup.md  zellij-session-management.md
claude-code-slack/docs/plans/: 2026-02-14-delegated-discovering-hearth.md  2026-03-15-web-agent-conductor.md  2026-03-15-zellij-session-management.md
claude-code-slack/docs/prompts/: 2026-02-14-init-spec.md
claude-code-slack/src/claude_code_slack/: claude_runner.py  cli.py  config.py  cron_scheduler.py  daemon.py  model_store.py  session_store.py  slack_app.py  store.py  web_server.py  zellij_manager.py
claude-code-slack/tasks/: prd-conductor-phase-2.md
claude-code-slack/tests/: test_claude_runner.py  test_cli_simulate.py  test_formatting.py  test_session_store.py  test_store.py
claude-code-slack/web/: package.json  pnpm-lock.yaml  vite.config.ts
claude-code-slack/web/src/: App.css  App.tsx  Terminal.tsx  index.css
meow/: .gitignore  pyproject.toml
meow/docs/plans/: 2026-05-06-meow-detector-daemon.md
meow/scripts/: eval_recordings.py
meow/src/meow/: __main__.py  capture.py  config.py  daemon.py  detector.py  enhance.py  notifier.py
yuki-conductor/: .env.template  .gitignore  CLAUDE.md  README.md  cron.example.yaml  pyproject.toml
yuki-conductor/docs/: slack-app-setup.md  zellij-session-management.md
yuki-conductor/docs/plans/: 2026-02-14-delegated-discovering-hearth.md  2026-03-15-web-agent-conductor.md  2026-03-15-zellij-session-management.md  2026-04-29-web-messaging-platform.md
yuki-conductor/src/yuki_conductor/: __init__.py  claude_runner.py  cli.py  config.py  conversation_store.py  cron_scheduler.py  daemon.py  formatting.py  slack_app.py  store.py  web_server.py  zellij_manager.py
yuki-conductor/src/yuki_conductor/messaging/: __init__.py  conversation.py  platform.py  slack_platform.py  web_platform.py
yuki-conductor/tests/: test_claude_runner.py  test_cli_simulate.py  test_conversation_store.py  test_formatting.py  test_messaging_core.py  test_store.py  test_web_messaging.py
yuki-conductor/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
yuki-conductor/web/src/: App.css  App.tsx  index.css
yuki-conductor/web/src/chat/: Chat.tsx  api.ts  chat.css
(+35 files in other folders)
