[project]
name = "meow"
version = "0.1.0"
description = "Cat meow detector daemon"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy",
    "sounddevice",
    "tensorflow",
    "tensorflow-hub",
    "scipy",
    "slack-sdk",
    "setuptools<81",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
